force-app/main/default/objects/Student_Address__c/Student_Address__c.object-meta.xml
<CustomObject>
    <label>Student Address</label>
    <nameField>
        <displayFormat>SAID{0000}</displayFormat>
        <label>StudentAddressId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>studentAddress</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>