force-app/main/default/objects/Student_Address__c/fields/HNO__c.field-meta.xml
<CustomField>
    <fullName>HNO__c</fullName>
    <label>HNO</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>