force-app/main/default/objects/Student_Address__c/fields/PINCODE__c.field-meta.xml
<CustomField>
    <fullName>PINCODE__c</fullName>
    <label>PINCODE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>