force-app/main/default/objects/Student_Address__c/fields/Student_Id__c.field-meta.xml
<CustomField>
    <fullName>Student_Id__c</fullName>
    <label>Student Id</label>
    <referenceTo>Student_Details__c</referenceTo>
    <relationshipLabel>studentAddress</relationshipLabel>
    <relationshipName>studentAddress</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>